<resources>
    <string name="app_name">SoundWaves</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="pref_only_wifi_description">Wait until connected to Wi-Fi to download files</string>
    <string name="pref_refresh_only_wifi_description">Restrict feeds from refreshing in the background</string>
    <string name="pref_only_wifi_title">Wi-Fi only downloading</string>
    <string name="pref_refresh_only_wifi_title">Restrict all data</string>
    <string name="pref_dark_theme">Enable dark theme for higher contrast</string>
    <string name="pref_dark_theme_title">Theme</string>
    <string name="pref_download_on_update_title">Automatic download</string>
    <string name="pref_download_on_update_description">Download new episodes automatically when they are available</string>
    <string name="pref_downloaded_expire_description">%s</string>
    <string name="pref_downloaded_expire_title">Storage limit</string>
    <string name="dialog_title_add_sub">Add podcast</string>
    <string name="dialog_message_add_sub">Please enter an URL:</string>
    <string name="title_section3">Player</string>
    <string name="title_section2">Discover</string>
    <string name="title_section1">Subscriptions</string>
    <string name="hello_world">Hello World!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_downloading">Download Manager</string>
    <string name="title_activity_swipe">SoundWaves</string>
    <string name="menu_download_all">Bulk download</string>
    <string name="menu_clear_playlist">Reset playlist</string>
    <string name="menu_import">Import/export OPML</string>
    <string name="menu_add_podcast">Add podcast</string>
    <string name="pref_feedback_title">Send anonymous reports</string>
    <string name="pref_feedback_description">Send anonymous data about the app, such as crash reports, to the developer</string>
    <string name="pref_cloud_support_title">Enable cloud support</string>
    <string name="pref_cloud_support_description">Cloud support will backup your data to the cloud and synchronize data between your devices</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="pref_stream_proxy_title">Download while streaming</string>
    <string name="pref_stream_proxy">This may require some extra time buffering</string>
    <string name="episode_title">Episode Title</string>
    <string name="episode_description">Episode Description</string>
    <string name="pref_continuously_playing">Continuous playback</string>
    <string name="pref_continuously_playing_description">When an episode ends, start the next one automatically</string>
    <string name="preferences_category_help">Help out</string>
    <string name="preferences_category_ui">User interface</string>
    <string name="preferences_category_player">Player</string>
    <string name="preferences_category_network">Network &amp; storage</string>
    <string name="preferences_category_cloud">Cloud support</string>
    <string name="preferences_category_advanced">Advanced</string>
    <string name="pref_player_forward_amount_dialog_title">Fast forward amount</string>
    <string name="pref_player_backward_amount_dialog_title">Rewind amount</string>
    <string name="pref_player_forward_amount_title">Fast forward</string>
    <string name="pref_player_backward_amount_title">Rewind</string>
    <string name="pref_player_forwards_amount_summary">Fast forward %s at a time</string>
    <string name="pref_player_backwards_amount_summary">Rewind %s at a time</string>
    <string name="pref_playback_category_title">Playback</string>
    <string name="preferences_category_about">About</string>
    <string name="pref_current_version_title">Version</string>
    <string name="ok">OK</string>
    <string name="playlist_filter_all">All subscriptions</string>
    <string name="playlist_filter_some">Custom selection</string>
    <string name="playlist_filter_prefix">Show:</string>
    <string name="preference_first_run_key">firstrun</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_refresh_feed">Refresh</string>
    <string name="menu_refresh_feed_all">Refresh</string>
    <string name="crash_toast">Crash :( Please help by sending a crash report</string>
    <string name="pref_help_category_title">Help Build SoundWaves</string>
    <string name="pref_help_static_field_description">If you would like to help out, there are plenty of things to do. It could be programming or it could be something completely different. I need help with translations, UI, icons/graphics, building a website, and so forth. Head over to the project page on GitHub (github.com/bottiger/SoundWaves) or send me an email: bottiger@gmail.com</string>
    <string name="episode_title_unknown">No Title :(</string>
    <string name="podcast_title_unknown">Unknown podcast title</string>
    <string name="subscription_instruction">Add new podcasts by using the Discovery page to the right.\n\nYou can also import an OPML file or sync with gpodder.net by going to the settings</string>
    <string name="filter_show_listened">Show Listened</string>
    <string name="auto_start_next">Auto Start Next</string>
    <string name="drawer_playlist_filters">Playlist Filters</string>
    <string name="opml_not_found">"OPML not found. Rename your file as %1$s and place it at the root folder of the storage (SD Card)"</string>
    <string name="pref_subscriptions_category_title">Subscriptions</string>
    <string name="pref_subscriptions_columns_dialog_title">Subscription columns</string>
    <string name="pref_subscriptions_columns_title">Subscription columns</string>
    <string name="pref_subscriptions_columns_summary">%s</string>
    <string name="pref_interface_other_category_title">Other</string>
    <string name="opml_radio_import">Import OPML file</string>
    <string name="opml_radio_export">Export subscriptions to OPML</string>
    <string name="opml_import_instructions">To import an OPML file, first copy it to: %1$s</string>
    <string name="opml_export_failed">Sorry. The export failed due to an unknown error :( Maybe you are running out of storage?</string>
    <string name="opml_export_succes">Your subscriptions were successfully exported to: %1$s</string>
    <string name="pref_network_category_network_title">Network</string>
    <string name="pref_network_category_storage_title">Storage</string>
    <string name="pref_network_category_storage_experimental">Experimental</string>
    <string name="pref_delete_when_finished_title">Delete after playback</string>
    <string name="pref_delete_when_finished_description">Episodes are automatically deleted after being played</string>
    <string name="opml_import_export_toolbar_title">Import / Export OPML File</string>
    <string name="import_export_explanation">Import your subscriptions</string>
    <string name="opml_import_explanation">Select an OPML file from your internal storage</string>
    <string name="opml_export_explanation">Export your subscriptions to the internal storage. They are stored on /STORAGE/podcasts.opml</string>
    <string name="opml_export_explanation_dynamic">Export your subscriptions to the internal storage. They are stored on %1$s/podcasts.opml</string>
    <string name="opml_export_explanation_fail">The OPML file cannot not be exported to internal storage. Please contact the developer!</string>
    <string name="opml_import_button">Import OPML</string>
    <string name="opml_export_button">Export to storage</string>
    <string name="opml_export_clipboard_button">Export to clipboard</string>
    <string name="opml_exported_to_toast">"Exported to "</string>
    <string name="opml_exported_to_clipboard_toast">"OPML data exported to clipboard"</string>
    <string name="media_route_menu_title">Cast</string>
    <string name="bulk_download_instructions">Download all episodes matching</string>
    <string name="bulk_download_day">Published within the last 24 hours</string>
    <string name="bulk_download_week">Published this Week</string>
    <string name="bulk_download_month">Published this Month</string>
    <string name="feedback_mail_client_picker">Send feedback using</string>
    <string name="mrp_request_failed">The MediaRoute request has failed.</string>
    <string name="pref_advanced_category_experimental">Experimental settings</string>
    <string name="pref_screen_rotation_title">Enable screen rotation</string>
    <string name="pref_screen_rotation_description">Support for landscape orientation</string>
    <string name="search_feed_hint">Search %s</string>
    <string name="search_query_hint">Search using %s</string>
    <string name="discovery_recommendations">Editors choice:</string>
    <string name="discovery_recommendations_trending">Trending</string>
    <string name="discovery_recommendations_popular">Popular</string>
    <string name="discovery_search_results">Results for: <i>%s</i></string>
    <string name="discovery_subscribe">Subscribe</string>
    <string name="discovery_subscribe_toast">Subscribed to %s</string>
    <string name="discovery_unsubscribe_toast">Unsubscribed from %s</string>
    <string name="subscription_no_title">(No title)</string>
    <string name="discovery_progress_loading_podcast_content">Fetching podcast content</string>
    <string name="discovery_select_backend">Select search engine</string>
    <string name="pref_cloud_category_cloud_title">Cloud support</string>
    <string name="pref_cloud_category_services_title">Web services</string>
    <string name="pref_webservices_dialog_title">Podcast search engine</string>
    <string name="pref_webservices_discovery_title">Podcast search engine</string>
    <string name="playlist_filter_introducion">Automatically populate the playlist with recent episodes from</string>
    <string name="playlist_filter_none">Do not populate</string>
    <string name="playlist_empty_title">Select playlist mode</string>
    <string name="playlist_empty_text_top">Take a moment to think about how you want to use the app</string>
    <string name="playlist_empty_text_bottom">You can always change how the playlist works by tapping on the icon with the three small bars in the top</string>
    <string name="playlist_empty_mode_one">Queue episodes manually</string>
    <string name="playlist_empty_mode_two">Recent episodes</string>
    <string name="playlist_empty_mode_one_desc">The playlist will only contain episodes you have queued manually</string>
    <string name="playlist_empty_mode_two_desc">The playlist will populate itself and always contain the most recent episodes. You can still queue selected episodes manually</string>
    <string name="feed_settings_show_description">Show episode description</string>
    <string name="feed_settings_in_playlist">Add new episodes to the playlist</string>
    <string name="feed_settings_download_new">Download new episodes</string>
    <string name="feed_settings_delete_when_listened">Delete when listened</string>
    <string name="feed_settings_intro">These settings will override the SoundWaves defaults for this specific podcast.</string>
    <string name="feed_settings_oldest_first">List oldest episodes first</string>
    <string name="feed_settings_notify_on_new">Notify on new episodes</string>
    <string name="feed_settings_skip_intro">Skip intro</string>
    <string name="menu_web_player">Web Player (beta)</string>
    <string name="menu_subscriptions_order">Sort by</string>
    <string name="menu_subscriptions_order_alphabetically">name (A-Z)</string>
    <string name="menu_subscriptions_order_alphabetically_reverse">name reversed (Z-A)</string>
    <string name="menu_subscriptions_order_updated">last updated</string>
    <string name="menu_subscriptions_order_new_count">new episodes</string>
    <string name="menu_feed_sort_order">Reverse order</string>
</resources>