<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This is a primitive example showing the different types of preferences available. -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:key="help"
        android:title="@string/preferences_category_help"
        android:icon="@drawable/ic_help_black">

        <org.bottiger.podcast.ToolbarPreference
            android:key="help"
            android:title="@string/preferences_category_help" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="ui"
        android:title="@string/preferences_category_ui"
        android:icon="@drawable/ic_settings_black">

        <org.bottiger.podcast.ToolbarPreference
            android:key="ui"
            android:title="@string/preferences_category_ui" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_dark_theme"
            android:summary="@string/pref_dark_theme"
            android:title="@string/pref_dark_theme_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="player"
        android:title="@string/preferences_category_player"
        android:icon="@drawable/ic_volume_up_black">

        <org.bottiger.podcast.ToolbarPreference
            android:key="player"
            android:title="@string/preferences_category_player" />

        <PreferenceCategory
            android:title="@string/pref_playback_category_title"
            android:key="pref_playback_category">

            <ListPreference
                android:key="pref_player_forward_amount"
                android:defaultValue="30"
                android:dialogTitle="@string/pref_player_forward_amount_dialog_title"
                android:entries="@array/pref_player_seek_entries"
                android:entryValues="@array/pref_player_seek_entries_values"
                android:title="@string/pref_player_forward_amount_title"
                android:summary="@string/pref_player_forwards_amount_summary" />

            <ListPreference
                android:key="pref_player_backward_amount"
                android:defaultValue="10"
                android:dialogTitle="@string/pref_player_backward_amount_dialog_title"
                android:entries="@array/pref_player_seek_entries"
                android:entryValues="@array/pref_player_seek_entries_values"
                android:title="@string/pref_player_backward_amount_title"
                android:summary="@string/pref_player_backwards_amount_summary" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_continuously_playing"
                android:summary="@string/pref_continuously_playing_description"
                android:title="@string/pref_continuously_playing" />

        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/pref_notification_category_title"
            android:key="pref_notification_category">

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_notification_control"
                android:summary="@string/pref_notification_control_description"
                android:title="@string/pref_notification_control" />

        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="network"
        android:title="@string/preferences_category_network"
        android:icon="@drawable/ic_signal_wifi_3_bar_black">

        <org.bottiger.podcast.ToolbarPreference
            android:key="network"
            android:title="@string/preferences_category_network" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_download_on_update"
            android:summary="@string/pref_download_on_update_description"
            android:title="@string/pref_download_on_update_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_download_only_wifi"
            android:summary="@string/pref_only_wifi_description"
            android:title="@string/pref_only_wifi_title" />

        <ListPreference
            android:defaultValue="1000"
            android:dialogTitle="@string/pref_downloaded_dialog_title"
            android:entries="@array/entries_download_file_expire"
            android:entryValues="@array/entryvalues_downlaod_file_expire"
            android:key="pref_podcast_collection_size"
            android:summary="@string/pref_downloaded_expire_description"
            android:title="@string/pref_downloaded_expire_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_stream_proxy"
            android:summary="@string/pref_stream_proxy"
            android:title="@string/pref_stream_proxy_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="cloud"
        android:title="@string/preferences_category_cloud"
        android:icon="@drawable/ic_cloud_queue_black">

        <org.bottiger.podcast.ToolbarPreference
            android:key="cloud"
            android:title="@string/preferences_category_cloud" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_cloud support"
            android:summary="@string/pref_cloud_support_description"
            android:title="@string/pref_cloud_support_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="advanced"
        android:title="@string/preferences_category_advanced"
        android:icon="@drawable/ic_adb_black">

        <org.bottiger.podcast.ToolbarPreference
            android:key="advanced"
            android:title="@string/preferences_category_advanced" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_anonymous_feedback"
            android:summary="@string/pref_feedback_description"
            android:title="@string/pref_feedback_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="about"
        android:title="@string/preferences_category_about"
        android:icon="@drawable/ic_info_outline_black">

        <org.bottiger.podcast.ToolbarPreference
            android:key="about"
            android:title="@string/preferences_category_about" />

        <Preference
            android:defaultValue="true"
            android:key="pref_current_version"
            android:title="@string/pref_current_version_title" />

    </PreferenceScreen>

</PreferenceScreen>