<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search_feed_hint"/>

    <item
        android:id="@+id/menu_refresh_feed"
        android:orderInCategory="2"
        android:title="@string/menu_refresh_feed" />

    <item
        android:id="@+id/menu_bulk_download"
        android:orderInCategory="3"
        android:title="@string/menu_download_all" />

    <item
        android:id="@+id/menu_feed_sort_order"
        android:orderInCategory="10"
        android:title="@string/menu_feed_sort_order" />

</menu>