<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/content_new"
        android:orderInCategory="10"
        app:showAsAction="never"
        android:title="@string/menu_add_podcast"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/menu_settings">
    </item>

    <item
        android:id="@+id/menu_web_player"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/menu_web_player">
    </item>

    <item android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"
        />

</menu>