<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<FrameLayout
    android:id="@+id/feed_activity_settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:paddingTop="40dp">
    <!--
    android:visibility="invisible"
    -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:paddingBottom="10dp"
        android:columnCount="2"
        android:alignmentMode="alignBounds"
        android:useDefaultMargins="true"
        >

        <TextView
            android:text="@string/feed_settings_intro"
            android:textAppearance="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="0"
            android:layout_marginBottom="15dp"
            />

        <TextView
            android:text="@string/feed_settings_show_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="fill_horizontal"
        />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/feed_description_switch"
            android:layout_column="1"
            android:layout_row="1"/>


        <TextView
            android:text="@string/feed_settings_in_playlist"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="fill_horizontal"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/feed_add_to_playlist_switch"
            android:layout_column="1"
            android:layout_row="2"/>

        <TextView
            android:text="@string/feed_settings_download_new"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="fill_horizontal"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/feed_auto_download_switch"
            android:layout_column="1"
            android:layout_row="3"/>

        <TextView
            android:text="@string/feed_settings_delete_when_listened"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_gravity="fill_horizontal"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/feed_auto_delete_switch"
            android:layout_column="1"
            android:layout_row="4"/>

        <TextView
            android:text="@string/feed_settings_oldest_first"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_gravity="fill_horizontal"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/feed_oldest_first_switch"
            android:layout_column="1"
            android:layout_row="5"/>

        <TextView
            android:text="@string/feed_settings_notify_on_new"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_column="0"
            android:layout_row="6"
            android:layout_gravity="fill_horizontal"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/feed_notify_on_new_switch"
            android:layout_column="1"
            android:layout_row="6"/>

        <TextView
            android:text="@string/feed_settings_skip_intro"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
            android:layout_column="0"
            android:layout_row="7"
            android:layout_gravity="fill_horizontal"
            />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/feed_skip_intro_switch"
            android:layout_column="1"
            android:layout_row="7"/>

    </GridLayout>

</FrameLayout>

</merge>